# langchain-google-cloud-sql-pg-python

./: .coveragerc  .gitignore  .repo-metadata.json  .trampolinerc  CHANGELOG.md  CODE_OF_CONDUCT.md  DEVELOPER.md  README.md  README.rst  integration.cloudbuild.yaml  integration.cloudbuild3.yaml  noxfile.py  owlbot.py  pyproject.toml  requirements-3.8.txt  requirements.txt
.github/: .Owlbot.lock.yaml  .Owlbot.yaml  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  blunderbuss.yml  header-checker-lint.yml  renovate.json5  sync-repo-settings.yaml  trusted-contribution.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support_request.md
.github/workflows/: cloud_build_failure_reporter.yml  docs.yml  label-new-prs.yml  labeler.yml  lint.yml  lint_fallback.yml  schedule_reporter.yml
.kokoro/: build.sh  publish-docs.sh  release.sh  requirements.txt
.kokoro/docker/docs/: Dockerfile  requirements.txt
.kokoro/docs/: common.cfg  docs-presubmit.cfg
.kokoro/release/: common.cfg
docs/: chat_message_history.ipynb  checkpointer.ipynb  conf.py  document_loader.ipynb  how_to_choose_an_index_guide.md  index.rst  langgraph_checkpoint.ipynb  summary_overview.md  vector_store.ipynb
docs/langchain_google_cloud_sql_pg/: engine.rst  history.rst  indexes.rst  integrations.rst  loader.rst  vectorstore.rst
samples/: README.md  chat_message_history.ipynb  document_loader.ipynb  langchain_quick_start.ipynb  requirements.txt  vector_store.ipynb
samples/index_tuning_sample/: README.md  create_vector_embeddings.py  index_search.py  requirements.txt
samples/langchain_on_vertexai/: README.md  clean_up.py  config.py  create_embeddings.py  prebuilt_langchain_agent_template.py  requirements.txt  retriever_agent_with_history_template.py  retriever_chain_template.py  tests.cloudbuild.yaml
samples/reasoning_engine/: README.md  clean_up.py  create_embeddings.py  prebuilt_langchain_agent.py  prebuilt_langchain_agent_template.py  requirements.txt  retriever_agent_with_history.py  retriever_agent_with_history_template.py  retriever_chain.py  retriever_chain_template.py  tests.cloudbuild.yaml
src/langchain_google_cloud_sql_pg/: __init__.py  async_chat_message_history.py  async_checkpoint.py  async_loader.py  async_vectorstore.py  chat_message_history.py  checkpoint.py  cloudSQL.py  cloudsql_vectorstore.py  engine.py  hybrid_search_config.py  indexes.py  loader.py  pgsql_engine.py  pgsql_loader.py  postgresql_chat_message_history.py  postgresql_engine.py  postgresql_loader.py  vectorstore.py  version.py
src/langgraph_google_alloydb_pg/: __init__.py  async_checkpoint.py
tests/: __init__.py  metadata_filtering_data.py  test_alloydb_async_checkpoint.py  test_async_chatmessagehistory.py  test_async_checkpoint.py  test_async_loader.py  test_async_vectorstore.py  test_async_vectorstore_from_methods.py  test_async_vectorstore_index.py  test_async_vectorstore_search.py  test_chatmessagehistory.py  test_checkpoint.py  test_cloudSQL.py  test_cloudsql_vectorstore.py  test_cloudsql_vectorstore_from_methods.py  test_cloudsql_vectorstore_index.py  test_cloudsql_vectorstore_search.py  test_engine.py  test_loader.py  test_postgresql_chatmessagehistory.py  test_postgresql_engine.py  test_postgresql_loader.py  test_postgresql_vectorstore.py  test_postgresql_vectorstore_from_methods.py  test_postgresql_vectorstore_index.py  test_postgresql_vectorstore_search.py  test_standard_test_suite.py  test_vectorstore.py  test_vectorstore_from_methods.py  test_vectorstore_index.py  test_vectorstore_search.py
