[project]
name = "langchain-google-cloud-sql-pg"
dynamic = ["version"]
description = "LangChain integrations for Google Cloud SQL for PostgreSQL"
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Google LLC", email = "googleapis-packages@google.com"}
]

dependencies = [
    "cloud-sql-python-connector[asyncpg] >= 1.10.0, <2.0.0",
    "langchain-core>=0.1.1, <1.0.0 ",
    "langchain-community>=0.0.18, <0.3.0",
    "numpy>=1.24.4, <2.0.0",
    "pgvector>=0.2.5, <1.0.0",
    "SQLAlchemy[asyncio]>=2.0.25, <3.0.0"
]

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools.dynamic]
version = {attr = "langchain_google_cloud_sql_pg.version.__version__"}

[project.urls]
Homepage = "https://github.com/googleapis/langchain-google-cloud-sql-pg-python"
Repository = "https://github.com/googleapis/langchain-google-cloud-sql-pg-python.git"
"Bug Tracker" = "https://github.com/googleapis/langchain-google-cloud-sql-pg-python/issues"
Changelog = "https://github.com/googleapis/langchain-google-cloud-sql-pg-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "black[jupyter]==24.4.2",
    "isort==5.13.2",
    "mypy==1.10.1",
    "pytest-asyncio==0.23.7",
    "pytest==8.2.2",
    "pytest-cov==5.0.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.8
warn_unused_configs = true
exclude = [
    'docs/*',
    'noxfile.py'
]
