[project]
name = "langchain-google-cloud-sql-pg"
dynamic = ["version"]
description = "LangChain integrations for Google Cloud SQL for PostgreSQL"
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Google LLC", email = "googleapis-packages@google.com"}
]

dependencies = [
    "cloud-sql-python-connector[asyncpg] >= 1.10.0, <2.0.0",
    "langchain-core>=0.2.36, <1.0.0 ",
    "numpy>=1.24.4, <3.0.0; python_version >= '3.11'",
    "numpy>=1.24.4, <=2.2.6; python_version == '3.10'",
    "numpy>=1.24.4, <=2.0.2; python_version <= '3.9'",
    "pgvector>=0.2.5, <1.0.0",
    "SQLAlchemy[asyncio]>=2.0.25, <3.0.0"
]

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools.dynamic]
version = {attr = "langchain_google_cloud_sql_pg.version.__version__"}

[project.urls]
Homepage = "https://github.com/googleapis/langchain-google-cloud-sql-pg-python"
Repository = "https://github.com/googleapis/langchain-google-cloud-sql-pg-python.git"
"Bug Tracker" = "https://github.com/googleapis/langchain-google-cloud-sql-pg-python/issues"
Changelog = "https://github.com/googleapis/langchain-google-cloud-sql-pg-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
langgraph = [
    "langgraph-checkpoint>=2.0.9, <3.0.0"
]
test = [
    "black[jupyter]==25.1.0",
    "isort==6.0.1",
    "mypy==1.15.0",
    "pytest-asyncio==0.26.0",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "langchain-tests==0.3.20",
    "langgraph==0.5.2"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.9
warn_unused_configs = true
disallow_incomplete_defs = true

exclude = [
    'docs/*',
    'noxfile.py'
]
