[project]
name = "langchain-google-cloud-sql-pg"
dynamic = ["version"]
description = "LangChain integrations for Google Cloud SQL for PostgreSQL"
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Google LLC", email = "googleapis-packages@google.com"}
]

dependencies = [
    "cloud-sql-python-connector[asyncpg] >= 1.10.0, <2.0.0",
    "numpy>=1.24.4, <3.0.0; python_version >= '3.11'",
    "numpy>=1.24.4, <=2.2.6; python_version == '3.10'",
    "langchain-postgres>=0.0.16",
]

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.setuptools.dynamic]
version = {attr = "langchain_google_cloud_sql_pg.version.__version__"}

[project.urls]
Homepage = "https://github.com/googleapis/langchain-google-cloud-sql-pg-python"
Repository = "https://github.com/googleapis/langchain-google-cloud-sql-pg-python.git"
"Bug Tracker" = "https://github.com/googleapis/langchain-google-cloud-sql-pg-python/issues"
Changelog = "https://github.com/googleapis/langchain-google-cloud-sql-pg-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
langgraph = [
    "langgraph-checkpoint>=3.0.0, <3.1.0"
]
test = [
    "black[jupyter]==25.12.0",
    "isort==7.0.0",
    "mypy==1.19.1",
    "pytest-asyncio==0.26.0",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "langchain-tests==1.1.0",
    "langgraph==1.0.4"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_incomplete_defs = true

exclude = [
    'docs/*',
    'noxfile.py'
]
